Fix for blocker bug 103036 -- crash when opening prefs dialog in Mac classic skin. Bullet-proof nsDocShell::FocusAvailable() against recursion, and fix the XBL to set focus later on. r=adamlock, sr=hyatt